# Opportunity-Radar

./: .env.example  .gitignore  Dockerfile  README.md  config.py  main.py  models.py  pyproject.toml  render.yaml  requirements.txt  sample_filings.json  server.py
agents/: alert_composer.py  context_enricher.py  filing_watcher.py  orchestrator.py  signal_classifier.py
data/: market_data.json  users.db
et_hack/: main.py  message_bus.py  pyproject.toml
et_hack/agents/: context_enricher.py  filing_watcher.py  signal_classifier.py
et_hack/infra/: dedup.py  user_store.py
et_hack/static/: app.js  index.html
infra/: auth.py  database.py  db_models.py  dedup.py  market_data.py  market_data_sources.py  user_store.py
static/: app.js  index.html  style.css
